--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,11 +7,23 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-title> Valendo: 1</ion-title>
+<ion-button color="primary">1</ion-button>
+<ion-button color="primary">3</ion-button>
+<ion-button color="primary">6</ion-button>
+<ion-button color="primary">9</ion-button>
+<ion-button color="primary">12</ion-button>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-title>Time 1</ion-title>
+<ion-button color="primary">+</ion-button>
+<ion-title>0</ion-title>
+<ion-button color="primary">-</ion-button>
+
+
+<ion-title class="centro">Time 2</ion-title>
+<ion-button color="primary">+</ion-button>
+<ion-title>0</ion-title>
+<ion-button color="primary">-</ion-button>
+
+
 </ion-content>
