--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,4 +1,34 @@
-centro{
+.botao{
+padding: 10px 0;
+justify-content: space-between;
+display: flex;
 
 }
 
+.cor{
+  background-color: rgb(175, 174, 174);
+  text-align: center;
+}
+
+.ion-title{
+  text-align: center;
+}
+
+.color{
+  background-color: rgb(175, 174, 174);
+}
+
+.time{
+  display: flex;
+  flex-direction: column;
+align-items: center;
+ion-button{
+  height: 50px;
+  width: 50px;
+}
+
+}
+
+.centro{
+justify-content: center;
+}
