--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,39 +1,39 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
+<ion-header [translucent]="true" >
+  <ion-toolbar color="danger">
+    <ion-title >
     Contador de Truco
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-card class="cor">
-    <ion-title class="ion-title"> Valendo: 1</ion-title>
+<ion-content [fullscreen]="true" color="dark">
+  <ion-card >
+    <ion-title class="ion-title" class="cor" color="dark"> VALENDO: {{numero}}</ion-title>
   </ion-card>
-<div class="botao">
-<ion-button color="primary">1</ion-button>
-<ion-button color="primary">3</ion-button>
-<ion-button color="primary">6</ion-button>
-<ion-button color="primary">9</ion-button>
-<ion-button color="primary">12</ion-button>
+<div >
+<ion-button  class="botao" color="light" (click)="clicarBotao1()">1</ion-button>
+<ion-button class="botao" color="light"(click)="clicarBotao3()">3</ion-button>
+<ion-button class="botao" color="light" (click)="clicarBotao6()">6</ion-button>
+<ion-button class="botao" color="light" (click)="clicarBotao9()">9</ion-button>
+<ion-button class="botao" color="light" (click)="clicarBotao12()">12</ion-button>
 </div>
 
 <ion-grid>
   <ion-card>
   <ion-row>
     <ion-col class="time">
-      <h1>Time 1</h1>
-      <ion-button class="color">+</ion-button>
-      <h1>0</h1>
-      <ion-button class="color">-</ion-button>
+     <ion-title color="dark"><h1>Time 1</h1></ion-title>
+      <ion-button color="dark" (click)="somarBotao1()">+</ion-button>
+      <h1>{{pont1}}</h1>
+      <ion-button color="dark" (Click)="subtrairBotao1()">-</ion-button>
 
     </ion-col>
 
     <ion-col class="time">
-      <h1>Time 2</h1>
-      <ion-button class="color">+</ion-button>
-      <h1>0</h1>
-      <ion-button class="color">-</ion-button>
+      <ion-title color="dark"><h1>Time 2</h1></ion-title>
+      <ion-button color="dark" (click)="somarBotao2()">+</ion-button>
+      <ion-title color="dark"><h1>{{pont2}}</h1></ion-title>
+      <ion-button color="dark" (click)="subtrairBotao2()">-</ion-button>
     </ion-col>
   </ion-row>
 </ion-card>
@@ -41,16 +41,16 @@
 
 <ion-grid>
 <ion-card>
-  <ion-title><h1>Partidas</h1></ion-title>
+  <ion-title color="dark"><h1>Partidas</h1></ion-title>
 
   <ion-row>
-    <ion-col><ion-title> Time 1 </ion-title></ion-col>
-    <ion-col><ion-title>0</ion-title></ion-col>
+    <ion-col><ion-title color="dark"> Time 1 </ion-title></ion-col>
+    <ion-col><ion-title color="dark">0</ion-title></ion-col>
   </ion-row>
 
   <ion-row>
-    <ion-col><ion-title> Time 2</ion-title></ion-col>
-    <ion-col><ion-title>0</ion-title></ion-col>
+    <ion-col><ion-title color="dark"> Time 2</ion-title></ion-col>
+    <ion-col><ion-title color="dark">0</ion-title></ion-col>
   </ion-row>
 
 
@@ -58,7 +58,7 @@
 </ion-grid>
 
 
-<ion-card class="ion-title"><h2>LIMPAR</h2></ion-card>
+<ion-card class="ion-title" color="dark"><h2 >LIMPAR</h2></ion-card>
 
 
 </ion-content>
