--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,18 +2,15 @@
 
   <ion-tab-bar slot="bottom" color="danger" >
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="logo-bitcoin"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="caret-forward-outline"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
